--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -18,9 +18,7 @@ $menu = wofi --show drun
 #################
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
-exec-once = $HOME/.config/hypr/waybar.sh &
-exec-once = $HOME/.config/hypr/wallpaper.sh &
-exec-once = dunst
+exec-once = $HOME/.config/hypr/waybar.sh & $HOME/.config/hypr/wallpaper.sh & dunst & hypridle
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -200,7 +198,7 @@ bind = $mainMod, Q, killactive,
 bind = $mainMod SHIFT, E, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, Space, exec, $menu
+bind = Alt, Space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
