--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -18,8 +18,8 @@ $menu = wofi --show drun
 #################
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
-exec-once = ~/.config/hypr/run_waybar.sh & hyprpaper & dunst & hypridle
-
+exec-once = ~/.config/hypr/run_waybar.sh & dunst & hypridle
+exec = hyprpaper
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
