--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -18,7 +18,7 @@ $menu = wofi --show drun
 #################
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
-exec-once = ~/.config/hypr/run_waybar.sh & dunst & hypridle
+exec-once = ~/.config/hypr/waybar.sh & dunst & hypridle
 exec = hyprpaper
 #############################
 ### ENVIRONMENT VARIABLES ###
