--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -19,6 +19,8 @@ $menu = wofi --show drun
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 exec-once = ~/.config/hypr/waybar.sh & dunst & hypridle
+exec-once = wl-paste --type text --watch cliphist store # Stores only text data
+exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 exec = hyprpaper
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -207,6 +209,9 @@ bind = $mainMod, B, exec, $browser
 bind = ,Print, exec, hyprshot -m output
 bind = SHIFT, Print, exec, hyprshot -m window -m active
 bind = $mainMod SHIFT, Print, exec, hyprshot -m region
+
+# Clipboard
+bind = $mainMod SHIFT, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
 
 # Reload waybar
 bind = $mainMod SHIFT, R, exec, hyprctl reload 
