--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -289,6 +289,7 @@ windowrulev2 = workspace 4, class:^(libreoffice-draw)$
 windowrulev2 = workspace 5, class:^(ONLYOFFICE)$
 windowrulev2 = workspace 5, class:^(libreoffice-writer)$
 windowrulev2 = workspace 6, class:^(steam)$
+windowrulev2 = workspace 6, class:^(heroic)$
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrule = suppressevent maximize, class:.*
