--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -210,6 +210,7 @@ bind = $mainMod, B, exec, $browser
 bind = ,Print, exec, hyprshot -m output
 bind = SHIFT, Print, exec, hyprshot -m window -m active
 bind = $mainMod SHIFT, Print, exec, hyprshot -m region
+bind = Alt, E, exec, thunar
 
 # Clipboard
 bind = $mainMod SHIFT, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
