--- a/dot_config/waybar/config
+++ b/dot_config/waybar/config
@@ -10,9 +10,10 @@
     "modules-left": [
         "custom/logo",
         "hyprland/workspaces",
+        "hyprland/window"
     ],
     "modules-center": [
-        "clock",
+       "clock"
     ],
         "modules-right": [
         "hyprland/language",
@@ -62,6 +63,19 @@
             "5": []
         }
     },
+    "hyprland/window": {
+    "max-length": 80,
+    "rewrite": {
+    ".*[Ff]irefox.*": "󰈹  $0",
+    ".*[Kk]itty.*": "  $0",
+    ".*[Nn]eovim.*|.*nvim.*": "  $0",
+    ".*[Ff]ish.*": "  $0",
+    ".*[Ll]f.*": "  $0",
+},
+    "format": "{}",
+    "on-empty": "hide"
+    },
+
     "memory": {
         "interval": 5,
         "format": " {}%",
