updated mpd and rmpc

--- a/dot_config/mpd/mpd.conf
+++ b/dot_config/mpd/mpd.conf
@@ -4,6 +4,9 @@ db_file            "~/.config/mpd/database"
 # The music directory is by default the XDG directory, uncomment to amend and choose a different directory
 music_directory    "~/Music"
 
+# Sticker file 
+sticker_file "$HOME/.config/mpd/sticker.sql"
+
 # Uncomment to refresh the database whenever files in the music_directory are changed
 auto_update "yes"
 
