updated waybar clock

--- a/dot_config/waybar/config
+++ b/dot_config/waybar/config
@@ -87,7 +87,7 @@
     "clock": {
         "tooltip-format": "{calendar}",
         "format-alt": "  {:%a, %d %b %Y}",
-        "format": "  {:%I:%M %p}"
+        "format": "  {:%H:%M %p}"
     },
     "network": {
         "format-wifi" : "{icon}",
