--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -12,15 +12,14 @@ $browser = firefox
 $terminal = kitty
 $fileManager = kitty -e lf
 $menu = $HOME/.config/rofi/launchers/type-1/launcher.sh
-
 #################
 ### AUTOSTART ###
 #################
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
-exec-once = $HOME/.config/hypr/waybar.sh & dunst & hypridle
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
+exec-once = wl-paste -t text --watch clipman store --no-persist
 exec = hyprpaper
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -214,7 +213,7 @@ bind = Alt, E, exec, thunar
 bind = $mainMod, N, exec, kitty -e nvim
 
 # Clipboard
-bind = $mainMod SHIFT, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
+bind = $mainMod SHIFT, V, exec, cliphist list | rofi -dmenu -theme catppuccin | cliphist decode | wl-copy
 
 # Reload waybar
 bind = $mainMod SHIFT, R, exec, hyprctl reload 
