updated clipboard manager and rofi

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -214,7 +214,7 @@ bind = Alt, E, exec, thunar
 bind = $mainMod, N, exec, kitty -e nvim
 
 # Clipboard
-bind = $mainMod SHIFT, V, exec, cliphist list | rofi -dmenu -theme catpuccin | cliphist decode | wl-copy
+bind = $mainMod SHIFT, V, exec, cliphist list | rofi -dmenu -theme catppuccin | cliphist decode | wl-copy
 
 # Reload waybar
 bind = $mainMod SHIFT, R, exec, hyprctl reload 
