--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -18,6 +18,7 @@ $menu = $HOME/.config/rofi/launchers/type-1/launcher.sh
 #################
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
+exec-once = systemctl --user start hyprpolkitagent
 exec-once = $HOME/.config/hypr/waybar.sh & dunst & hypridle
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
