updated hyprland and archived lf

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -10,7 +10,7 @@ monitor=,preferred,auto,auto
 # Set programs that you use
 $browser = firefox
 $terminal = kitty
-$fileManager = kitty -e lf
+$fileManager = kitty -e yazi
 $menu = $HOME/.config/rofi/launchers/type-1/launcher.sh
 
 #################
