--- a/dot_config/yazi/keymap.toml
+++ b/dot_config/yazi/keymap.toml
@@ -136,14 +136,15 @@ keymap = [
 	{ on = [ "w" ], run = "tasks_show", desc = "Show the tasks manager" },
 
 	# Goto
-	{ on = [ "g", "h" ],       run = "cd ~",             desc = "Go to the home directory" },
-	{ on = [ "g", "c" ],       run = "cd ~/.config",     desc = "Go to the config directory" },
-	{ on = [ "g", "d" ],       run = "cd ~/Downloads",   desc = "Go to the downloads directory" },
- 	{ on = [ "g", "D" ],       run = "cd ~/Documents",   desc = "Go to the documents directory" },
- 	{ on = [ "g", "p" ],       run = "cd ~/Pictures",    desc = "Go to the pictures directory" },
+	{ on = [ "g", "h" ],       run = "cd ~",                            desc = "Go to the home directory" },
+	{ on = [ "g", "c" ],       run = "cd ~/.config",                    desc = "Go to the config directory" },
+	{ on = [ "g", "d" ],       run = "cd ~/Downloads",                  desc = "Go to the downloads directory" },
+ 	{ on = [ "g", "D" ],       run = "cd ~/Documents",                  desc = "Go to the documents directory" },
+ 	{ on = [ "g", "p" ],       run = "cd ~/Pictures",                   desc = "Go to the pictures directory" },
  	{ on = [ "g", "r" ],       run = "cd ~/.local/share/chezmoi",       desc = "Go to the dotfiles directory" },
-	{ on = [ "g", "t" ],       run = "cd /tmp",          desc = "Go to the temporary directory" },
-	{ on = [ "g", "<Space>" ], run = "cd --interactive", desc = "Go to a directory interactively" },
+ 	{ on = [ "g", "s" ],       run = "cd ~/Sync",                       desc = "Go to the syncthing directory" },
+	{ on = [ "g", "t" ],       run = "cd /tmp",                         desc = "Go to the temporary directory" },
+	{ on = [ "g", "<Space>" ], run = "cd --interactive",                desc = "Go to a directory interactively" },
 
 	# Help
 	{ on = [ "~" ], run = "help", desc = "Open help" },
