--- a/dot_config/fastfetch/config.jsonc
+++ b/dot_config/fastfetch/config.jsonc
@@ -1,173 +1,80 @@
-// Based on #1576
+// Inspired by Catnap
 {
     "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
+    "logo": {
+        "type": "small",
+        "padding": {
+            "top": 1
+        }
+    },
     "display": {
-        "color": {
-            "keys": "blue"
-        },
-        "separator": "",
-        "constants": [
-            "──────────────────────────────────────────────",
-            "\u001b[47D",
-            "\u001b[47C",
-            "\u001b[46C"
-        ],
-        "brightColor": false
+        "separator": " "
     },
     "modules": [
         {
-            "type": "version",
-            "key": "┌───────────────┬─{$1}┐\u001b[41D",
-            "format": "\u001b[1m{#keys} {1} - {2} "
+            "key": "╔═══════════╗",
+            "type": "custom"
         },
         {
-            "type": "os",
-            "key": "│  {icon}  \u001b[s{sysname}\u001b[u\u001b[10C│{$3}│{$2}"
+            "key": "║ {#31} user    {#keys}║",
+            "type": "title",
+            "format": "{user-name}"
         },
         {
-            "type": "datetime",
-            "key": "│  {icon}  Fetched   │{$3}│{$2}",
-            "format": "{year}-{month-pretty}-{day-pretty} {hour-pretty}:{minute-pretty}:{second-pretty} {timezone-name}"
+            "key": "║ {#32}󰇅 hname   {#keys}║",
+            "type": "title",
+            "format": "{host-name}"
         },
         {
-            "type": "locale",
-            "key": "│  {icon}  Locale    │{$3}│{$2}"
-        },
-
-        // Hardware
-        {
-            "type": "custom",
-            "key": "│{#cyan}┌──────────────┬{$1}┐{#keys}│\u001b[37D",
-            "format": "{#bright_cyan} Hardware "
+            "key": "║ {#33}󰅐 uptime  {#keys}║",
+            "type": "uptime"
         },
         {
-            "type": "chassis",
-            "key": "│{#cyan}│ {icon}  Chassis   │{$4}│{#keys}│{$2}"
+            "key": "║ {#34}{icon} distro  {#keys}║",
+            "type": "os"
         },
         {
-            "type": "memory",
-            "key": "│{#cyan}│ {icon}  RAM       │{$4}│{#keys}│{$2}"
+            "key": "║ {#35} kernel  {#keys}║",
+            "type": "kernel"
         },
         {
-            "type": "swap",
-            "key": "│{#cyan}│ {icon}  SWAP      │{$4}│{#keys}│{$2}"
+            "key": "║ {#36}󰇄 desktop {#keys}║",
+            "type": "de"
         },
         {
+            "key": "║ {#31} term    {#keys}║",
+            "type": "terminal"
+        },
+        {
+            "key": "║ {#32} shell   {#keys}║",
+            "type": "shell"
+        },
+        {
+            "key": "║ {#33}󰍛 cpu     {#keys}║",
             "type": "cpu",
-            "key": "│{#cyan}│ {icon}  CPU       │{$4}│{#keys}│{$2}",
             "showPeCoreCount": true
         },
         {
-            "type": "gpu",
-            "key": "│{#cyan}│ {icon}  GPU       │{$4}│{#keys}│{$2}"
-        },
-        {
+            "key": "║ {#34}󰉉 disk    {#keys}║",
             "type": "disk",
-            "key": "│{#cyan}│ {icon}  Disk      │{$4}│{#keys}│{$2}",
-            "format": "{size-used} \/ {size-total} ({size-percentage}) - {filesystem}",
+            "folders": "/"
         },
         {
-            "type": "battery",
-            "key": "│{#cyan}│ {icon}  Battery   │{$4}│{#keys}│{$2}"
+            "key": "║ {#35} memory  {#keys}║",
+            "type": "memory"
         },
         {
-            "type": "custom",
-            "key": "│{#cyan}└──────────────┴{$1}┘{#keys}│",
-            "format": ""
-        },
-
-        // Desktop
-        {
-            "type": "custom",
-            "key": "│{#green}┌──────────────┬{$1}┐{#keys}│\u001b[37D",
-            "format": "{#bright_green} Desktop "
+            "key": "╠═══════════╣",
+            "type": "custom"
         },
         {
-            "type": "de",
-            "key": "│{#green}│ {icon}  Desktop   │{$4}│{#keys}│{$2}"
+            "key": "║ {#39} colors  {#keys}║",
+            "type": "colors",
+            "symbol": "circle"
         },
         {
-            "type": "wm",
-            "key": "│{#green}│ {icon}  Session   │{$4}│{#keys}│{$2}"
-        },
-        {
-            "type": "display",
-            "key": "│{#green}│ {icon}  Display   │{$4}│{#keys}│{$2}",
-            "compactType": "original-with-refresh-rate"
-        },
-        {
-            "type": "gpu",
-            "key": "│{#green}│ {icon}  G-Driver  │{$4}│{#keys}│{$2}",
-            "format": "{driver}"
-        },
-        {
-            "type": "custom",
-            "key": "│{#green}└──────────────┴{$1}┘{#keys}│",
-            "format": ""
-        },
-
-        // Terminal
-        {
-            "type": "custom",
-            "key": "│{#yellow}┌──────────────┬{$1}┐{#keys}│\u001b[37D",
-            "format": "{#bright_yellow} Terminal "
-        },
-        {
-            "type": "shell",
-            "key": "│{#yellow}│ {icon}  Shell     │{$4}│{#keys}│{$2}"
-        },
-        {
-            "type": "terminal",
-            "key": "│{#yellow}│ {icon}  Terminal  │{$4}│{#keys}│{$2}"
-        },
-        {
-            "type": "terminalfont",
-            "key": "│{#yellow}│ {icon}  Term Font │{$4}│{#keys}│{$2}"
-        },
-        {
-            "type": "terminaltheme",
-            "key": "│{#yellow}│ {icon}  Colors    │{$4}│{#keys}│{$2}"
-        },
-        {
-            "type": "packages",
-            "key": "│{#yellow}│ {icon}  Packages  │{$4}│{#keys}│{$2}"
-        },
-        {
-            "type": "custom",
-            "key": "│{#yellow}└──────────────┴{$1}┘{#keys}│",
-            "format": ""
-        },
-
-        // Uptime
-        {
-            "type": "custom",
-            "key": "│{#magenta}┌──────────────┬{$1}┐{#keys}│\u001b[36D",
-            "format": "{#bright_magenta} Uptime "
-        },
-        {
-            "type": "uptime",
-            "key": "│{#magenta}│ {icon}  Uptime    │{$4}│{#keys}│{$2}"
-        },
-        {
-            "type": "disk",
-            "keyIcon": "",
-            "key": "│{#magenta}│ {icon}  OS Age    │{$4}│{#keys}│{$2}",
-            "folders": "/", // On macOS, "/System/Volumes/VM" works for me
-            "format": "{create-time:10} [{days} days]"
-        },
-        {
-            "type": "custom",
-            "key": "│{#magenta}└──────────────┴{$1}┘{#keys}│",
-            "format": ""
-        },
-        {
-            "type": "custom",
-            "key": "└─────────────────{$1}┘",
-            "format": ""
-        },
-
-        // End
-        "break",
-        "colors"
+            "key": "╚═══════════╝",
+            "type": "custom"
+        }
     ]
 }
