--- a/dot_config/fastfetch/config.jsonc
+++ b/dot_config/fastfetch/config.jsonc
@@ -54,6 +54,10 @@
             "type": "cpu",
             "showPeCoreCount": true
         },
+         {
+            "key": "║ {#34}󰍛 gpu     {#keys}║",
+            "type": "gpu"
+        },
         {
             "key": "║ {#34}󰉉 disk    {#keys}║",
             "type": "disk",
