--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -259,9 +259,23 @@ bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 bind = $mainMod, Tab, workspace, e+1
 bind = $mainMod SHIFT, Tab, workspace, e-1
 
-# Move/resize windows with mainMod + LMB/RMB and dragging
+# Move windows
 bindm = $mainMod, mouse:272, movewindow
+bind = $mainMod SHIFT, h, swapwindow, l  
+binde = $mainMod SHIFT, h, moveactive, -50 0  
+bind = $mainMod SHIFT, l, swapwindow, r  
+binde = $mainMod SHIFT, l, moveactive, 50 0  
+bind = $mainMod SHIFT, k, swapwindow, u  
+binde = $mainMod SHIFT, k, moveactive, 0 -50  
+bind = $mainMod SHIFT, j, swapwindow, d  
+binde = $mainMod SHIFT, j, moveactive, 0 50
+
+# Resize windows
 bindm = $mainMod, mouse:273, resizewindow
+bindel = $mainMod, l, resizeactive, 10 0
+bindel = $mainMod, h, resizeactive, -10 0
+bindel = $mainMod, k, resizeactive, 0 -10
+bindel = $mainMod, j, resizeactive, 0 10
 
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
