--- a/dot_config/waybar/config
+++ b/dot_config/waybar/config
@@ -70,7 +70,7 @@
     ".*[Kk]itty.*": "  $0",
     ".*[Nn]eovim.*|.*nvim.*": "  $0",
     ".*[Ff]ish.*": "  $0",
-    ".*[Ll]f.*": "  $0",
+    ".*[Yi]azi.*": "  $0",
 },
     "format": "{}",
     "on-empty": "hide"
