--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -168,7 +168,8 @@ input {
     kb_options = grp:alt_shift_toggle
     kb_rules = 
 
-    follow_mouse = 3
+    follow_mouse = 0
+    float_switch_override_focus = false
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
