--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -70,7 +70,7 @@ general {
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 
-    layout = master
+    layout = dwindle
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
@@ -205,7 +205,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, F, fullscreen,
 bind = Alt, Space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, Space, togglesplit, # dwindle
 
 # Launch apps
 bind = $mainMod, B, exec, $browser
