--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -22,7 +22,7 @@ exec-once = systemctl --user start hyprpolkitagent
 exec-once = $HOME/.config/hypr/waybar.sh & dunst & hypridle
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
-exec = hyprpaper
+exec = $HOME/.config/hypr/wallpaper.sh
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
