--- a/dot_config/starship.toml
+++ b/dot_config/starship.toml
@@ -144,6 +144,14 @@ style = "fg:crust bg:sapphire"
 format = '[$symbol$environment ]($style)'
 ignore_base = false
 
+[cmd_duration]
+show_milliseconds = false
+format = " took [$duration]($style) "
+style = "fg:peach"
+disabled = false
+show_notifications = true
+min_time_to_notify = 45000
+
 [character] # The name of the module we are configuring is 'character'
 disabled = false
 success_symbol = '[❯](bold fg:green)'
@@ -152,6 +160,9 @@ vimcmd_symbol = '[❮](bold fg:green)'
 vimcmd_replace_one_symbol = '[❮](bold fg:lavender)'
 vimcmd_replace_symbol = '[❮](bold fg:lavender)'
 vimcmd_visual_symbol = '[❮](bold fg:yellow)'
+
+[line_break]
+disabled = false
 
 [package]
 disabled = true
