--- a/dot_config/starship.toml
+++ b/dot_config/starship.toml
@@ -17,6 +17,7 @@ $nodejs\
 $php\
 $java\
 $kotlin\
+$lua\
 $haskell\
 $python\
 [](fg:green bg:sapphire)\
@@ -120,6 +121,11 @@ format = '[[ $symbol( $version) ](fg:crust bg:green)]($style)'
 
 [kotlin]
 symbol = ""
+style = "bg:green"
+format = '[[ $symbol( $version) ](fg:crust bg:green)]($style)'
+
+[lua]
+symbol = ""
 style = "bg:green"
 format = '[[ $symbol( $version) ](fg:crust bg:green)]($style)'
 
