--- a/dot_config/starship.toml
+++ b/dot_config/starship.toml
@@ -146,8 +146,8 @@ style = "bg:sapphire"
 format = '[[ $symbol( $context) ](fg:crust bg:sapphire)]($style)'
 
 [shell]
-fish_indicator = " 󰈺 "
-powershell_indicator = ' _ '
+fish_indicator = ' 󰈺 '
+powershell_indicator = '_ '
 unknown_indicator = 'mystery shell'
 style = "fg:crust bg:sapphire"
 format = '[$indicator]($style)'
