--- a/dot_config/fastfetch/config.jsonc
+++ b/dot_config/fastfetch/config.jsonc
@@ -11,21 +11,7 @@
         "separator": " "
     },
    "modules": [
-        {
-            "key": "{#31} user   {#keys}",
-            "type": "title",
-            "format": "{user-name}"
-        },
-        {
-            "key": "{#32}󰇅 hname  {#keys}",
-            "type": "title",
-            "format": "{host-name}"
-        },
-        {
-            "key": "{#33}󰅐 uptime {#keys}",
-            "type": "uptime"
-        },
-        {
+       {
             "key": "{#34}{icon} distro {#keys}",
             "type": "os"
         },
@@ -46,6 +32,10 @@
             "type": "shell"
         },
         {
+            "key": "{#32} font   {#keys}",
+            "type": "terminalfont"
+        },
+         {
             "key": "{#33}󰉼 theme  {#keys}",
             "type": "theme"
         },
