--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -9,8 +9,8 @@ monitor=,preferred,auto,auto
 ###################
 # Set programs that you use
 $browser = firefox
-$terminal = kitty
-$fileManager = kitty -e yazi
+$terminal = ghostty
+$fileManager = ghostty -e yazi
 $menu = $HOME/.config/rofi/launchers/type-1/launcher.sh
 
 #################
@@ -213,7 +213,7 @@ bind = ,Print, exec, hyprshot -m output
 bind = SHIFT, Print, exec, hyprshot -m window -m active
 bind = $mainMod SHIFT, Print, exec, hyprshot -m region
 bind = Alt, E, exec, thunar
-bind = $mainMod, N, exec, kitty -e nvim
+bind = $mainMod, N, exec, ghostty -e nvim
 
 # Clipboard
 bind = $mainMod SHIFT, V, exec, cliphist list | rofi -dmenu -theme catppuccin | cliphist decode | wl-copy
@@ -298,8 +298,6 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
-# Example windowrule
-# windowrule = float,class:^(kitty)$,title:^(kitty)$
 #Assign apps to workspaces
 windowrulev2 = workspace 2, class:^(firefox)$
 windowrulev2 = workspace 3, class:^(thunar)$
