added foot terminal

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -9,8 +9,8 @@ monitor=,preferred,auto,auto
 ###################
 # Set programs that you use
 $browser = firefox
-$terminal = kitty
-$fileManager = kitty -e yazi
+$terminal = foot
+$fileManager = foot -e yazi
 $menu = $HOME/.config/rofi/launchers/type-1/launcher.sh
 
 #################
@@ -213,7 +213,7 @@ bind = ,Print, exec, hyprshot -m output
 bind = SHIFT, Print, exec, hyprshot -m window -m active
 bind = $mainMod SHIFT, Print, exec, hyprshot -m region
 bind = Alt, E, exec, thunar
-bind = $mainMod, N, exec, kitty -e nvim
+bind = $mainMod, N, exec, foot -e nvim
 
 # Clipboard
 bind = $mainMod SHIFT, V, exec, cliphist list | rofi -dmenu -theme catppuccin | cliphist decode | wl-copy
