--- a/dot_config/waybar/config
+++ b/dot_config/waybar/config
@@ -68,6 +68,7 @@
     "rewrite": {
     ".*[Ff]irefox.*": "󰈹  $0",
     ".*[Kk]itty.*": "  $0",
+    ".*[Ff]oot.*": "  $0",
     ".*[Nn]eovim.*|.*nvim.*": "  $0",
     ".*[Ff]ish.*": "  $0",
     ".*[Yi]azi.*": "  $0",
