updated nvim plugins

--- a/dot_config/foot/foot.ini
+++ b/dot_config/foot/foot.ini
@@ -86,10 +86,10 @@ font=JetBrainsMono NF:size=11
 # regex-copy=[your-fancy-name] Control+Alt+Shift+q
 
 [cursor]
-# style=block
+style=beam
 # blink=no
 # blink-rate=500
-# beam-thickness=1.5
+beam-thickness=1.5
 # underline-thickness=<font underline thickness>
 
 [mouse]
