--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -28,10 +28,8 @@ exec = $HOME/.config/hypr/wallpaper.sh
 #############################
 env = XCURSOR_SIZE,24
 env = XCURSOR_THEME,Catppuccin-Mocha-Sapphire
+env = GTK_THEME,Catppuccin-Mocha-Standard-Sapphire-Dark
 
-# See https://wiki.hyprland.org/Configuring/Environment-variables/
-
-env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
 ###################
