--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -29,7 +29,7 @@ exec = $HOME/.config/hypr/wallpaper.sh
 env = XCURSOR_SIZE,24
 env = XCURSOR_THEME,Catppuccin-Mocha-Sapphire
 env = GTK_THEME,Catppuccin-Mocha-Standard-Sapphire-Dark
-
+env = GTK_ICON_THEME,Papirus-Dark
 env = HYPRCURSOR_SIZE,24
 
 ###################
