--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -30,8 +30,10 @@ env = XCURSOR_SIZE,24
 env = XCURSOR_THEME,Catppuccin-Mocha-Sapphire
 env = GTK_THEME,Catppuccin-Mocha-Standard-Sapphire-Dark
 env = GTK_ICON_THEME,Papirus-Dark
+env = HYPRCURSOR_THEME,Catppuccin-Mocha-Sapphire
 env = HYPRCURSOR_SIZE,24
-
+env = GTK_CURSOR_THEME_NAME,Catppuccin-Mocha-Sapphire
+env = GTK_CURSOR_THEME_SIZE,24
 ###################
 ### PERMISSIONS ###
 ###################
