--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -1,31 +1,20 @@
 source=~/.config/hypr/mocha.conf
-
-################
-### MONITORS ###
-################
 monitor=,preferred,auto,auto
-###################
-### MY PROGRAMS ###
-###################
+
 # Set programs that you use
 $browser = firefox
 $terminal = foot
 $fileManager = foot -e yazi
 $menu = $HOME/.config/rofi/launchers/type-1/launcher.sh
 
-#################
-### AUTOSTART ###
-#################
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
-# Or execute your favorite apps at launch like this:
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = $HOME/.config/hypr/waybar.sh & dunst & hypridle
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 exec = $HOME/.config/hypr/wallpaper.sh
-#############################
-### ENVIRONMENT VARIABLES ###
-#############################
+
+# Environment Variables
 env = XCURSOR_SIZE,24
 env = XCURSOR_THEME,Catppuccin-Mocha-Sapphire
 env = GTK_THEME,Catppuccin-Mocha-Standard-Sapphire-Dark
@@ -34,26 +23,8 @@ env = HYPRCURSOR_THEME,Catppuccin-Mocha-Sapphire
 env = HYPRCURSOR_SIZE,24
 env = GTK_CURSOR_THEME_NAME,Catppuccin-Mocha-Sapphire
 env = GTK_CURSOR_THEME_SIZE,24
-###################
-### PERMISSIONS ###
-###################
-# See https://wiki.hyprland.org/Configuring/Permissions/
-# Please note permission changes here require a Hyprland restart and are not applied on-the-fly
-# for security reasons
 
-# ecosystem {
-#   enforce_permissions = 1
-# }
-
-# permission = /usr/(bin|local/bin)/grim, screencopy, allow
-# permission = /usr/(lib|libexec|lib64)/xdg-desktop-portal-hyprland, screencopy, allow
-# permission = /usr/(bin|local/bin)/hyprpm, plugin, allow
-
-#####################
-### LOOK AND FEEL ###
-#####################
-# Refer to https://wiki.hyprland.org/Configuring/Variables/
-# https://wiki.hyprland.org/Configuring/Variables/#general
+# Appearance
 general {
     gaps_in = 5
     gaps_out = 10
@@ -73,12 +44,10 @@ general {
     layout = dwindle
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
     rounding = 10
     rounding_power = 4
 
-    # Change transparency of focused and unfocused windows
     active_opacity = 1.0
     inactive_opacity = 0.9
 
@@ -89,7 +58,6 @@ decoration {
         color = rgba(1e1e2eee)
     }
 
-    # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
         size = 3
@@ -99,11 +67,8 @@ decoration {
     }
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
     enabled = yes, please :)
-
-    # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
     bezier = easeOutQuint,0.23,1,0.32,1
     bezier = easeInOutCubic,0.65,0.05,0.36,1
@@ -129,38 +94,21 @@ animations {
     animation = workspacesOut, 1, 1.94, almostLinear, fade
 }
 
-# Ref https://wiki.hyprland.org/Configuring/Workspace-Rules/
-# "Smart gaps" / "No gaps when only"
-# uncomment all if you wish to use that.
-# workspace = w[tv1], gapsout:0, gapsin:0
-# workspace = f[1], gapsout:0, gapsin:0
-# windowrule = bordersize 0, floating:0, onworkspace:w[tv1]
-# windowrule = rounding 0, floating:0, onworkspace:w[tv1]
-# windowrule = bordersize 0, floating:0, onworkspace:f[1]
-# windowrule = rounding 0, floating:0, onworkspace:f[1]
-
-# See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
-    pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = true # You probably want this
-}
+    pseudotile = true     
+    preserve_split = true 
+    }
 
-# See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
     new_status = master
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
-    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    force_default_wallpaper = 0 
+    disable_hyprland_logo = false 
 }
 
-#############
-### INPUT ###
-#############
-
-# https://wiki.hyprland.org/Configuring/Variables/#input
+# Keyboard Layout and Languages
 input {
     kb_layout = us,gr
     kb_variant =
@@ -178,58 +126,42 @@ input {
     }
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
     workspace_swipe = false
 }
 
-# Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
 device {
     name = epic-mouse-v1
     sensitivity = -0.5
 }
 
-###################
-### KEYBINDINGS ###
-###################
-# See https://wiki.hyprland.org/Configuring/Keywords/
-$mainMod = SUPER # Sets "Windows" key as main modifier
-
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
+# Hyprland Keybindings
+$mainMod = SUPER 
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod SHIFT, E, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, F, fullscreen,
+bind = $mainMod SHIFT, R, exec, hyprctl reload 
+bind = $mainMod SHIFT, P, exec, $HOME/.config/hypr/waybar.sh 
+bind = $mainMod, left, movefocus, l
+bind = $mainMod, right, movefocus, r
+bind = $mainMod, up, movefocus, u
+bind = $mainMod, down, movefocus, d
+bind = $mainMod SHIFT, left, cyclenext, prev
+bind = $mainMod SHIFT, right, cyclenext
+
 bind = Alt, Space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, Space, togglesplit, # dwindle
-
-# Launch apps
 bind = $mainMod, B, exec, $browser
 bind = ,Print, exec, hyprshot -m output
 bind = SHIFT, Print, exec, hyprshot -m window -m active
 bind = $mainMod SHIFT, Print, exec, hyprshot -m region
 bind = Alt, E, exec, thunar
 bind = $mainMod, N, exec, foot -e nvim
-
-# Clipboard
 bind = $mainMod SHIFT, V, exec, cliphist list | rofi -dmenu -theme catppuccin | cliphist decode | wl-copy
-
-# Reload waybar
-bind = $mainMod SHIFT, R, exec, hyprctl reload 
-bind = $mainMod SHIFT, P, exec, $HOME/.config/hypr/waybar.sh 
-
-# Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
-
-bind = $mainMod SHIFT, left, cyclenext, prev
-bind = $mainMod SHIFT, right, cyclenext
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -289,16 +221,13 @@ bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
 
-# Requires playerctl
+# Media Controls
 bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
-##############################
-### WINDOWS AND WORKSPACES ###
-##############################
-#Assign apps to workspaces
+# Assign apps to workspaces
 windowrulev2 = workspace 2, class:^(firefox)$
 windowrulev2 = workspace 3, class:^(thunar)$
 windowrulev2 = workspace 4, class:^(libreoffice-calc)$
