--- a/dot_config/hypr/hyprpaper.conf
+++ b/dot_config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
 preload = $HOME/Pictures/wallhaven-9m1jyx_3840x2160.png
-wallpaper = DP-1, $HOME/Pictures/wallhaven-9m1jyx_3840x2160.png
+wallpaper = , $HOME/Pictures/wallhaven-9m1jyx_3840x2160.png
