added rofi icon on waybar title

--- a/dot_config/waybar/config
+++ b/dot_config/waybar/config
@@ -71,6 +71,7 @@
     ".*[Ff]oot.*": "  $0",
     ".*[Nn]eovim.*|.*nvim.*": "  $0",
     ".*[Ff]ish.*": "  $0",
+    ".*[Rr]ofi.*": "  $0",
     ".*[Yi]azi.*": "  $0",
 },
     "format": "{}",
