--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -23,6 +23,11 @@ env = HYPRCURSOR_THEME,Catppuccin-Mocha-Sapphire
 env = HYPRCURSOR_SIZE,24
 env = GTK_CURSOR_THEME_NAME,Catppuccin-Mocha-Sapphire
 env = GTK_CURSOR_THEME_SIZE,24
+env = QT_QPA_PLATFORM,wayland
+env = QT_QPA_PLATFORMTHEME,qt5ct
+env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
+env = QT_AUTO_SCREEN_SCALE_FACTOR,1
+env = QT_STYLE_OVERRIDE,kvantum
 
 # Appearance
 general {
