--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -1,4 +1,5 @@
-source=~/.config/hypr/mocha.conf
+source = $HOME/.config/hypr/mocha.conf
+source = $HOME/.config/hypr/environment.conf
 monitor=,preferred,auto,auto
 
 # Set programs that you use
