added qt and gtk theming tools

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -14,6 +14,13 @@ exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 exec = $HOME/.config/hypr/wallpaper.sh
 
+# Environment Variables
+env = HYPRCURSOR_THEME,catppuccin-mocha-sapphire-cursors
+env = HYPRCURSOR_SIZE,24
+env = GTK_THEME.Catppuccin-Mocha-Standard-Sapphire-Dark
+env = GTK_ICON_THEME.Papirus-Dark
+env = GTK_CURSOR_THEME_SIZE,24
+
 # Appearance
 general {
     gaps_in = 5
