added niri modules on waybar

--- a/dot_config/waybar/config
+++ b/dot_config/waybar/config
@@ -9,8 +9,10 @@
     "height": 30,
     "modules-left": [
         "custom/logo",
+        "niri/workspaces",
         "hyprland/workspaces",
-        "hyprland/window"
+        "hyprland/window",
+        "niri/window"
     ],
     "modules-center": [
        "clock"
@@ -18,6 +20,7 @@
         "modules-right": [
         "tray",
         "hyprland/language",
+        "niri/language",
         "cpu",
         "memory",
         "temperature",
@@ -34,7 +37,21 @@
         "icon-size": 25,
         "tooltip-format": "{title}"
     },
+    "niri/workspaces": {
+    "disable-click": true,
+    "format": "{icon}",
+    "format-icons": {
+      "active": " ",
+      "default": " ",
+    },
+    },
      "hyprland/language": {
+      "format": " {}",
+      "format-gr": "GR",
+      "format-en": "US",
+      "on-click": "hyprctl switchxkblayout sonix-usb-device-keyboard next"
+    },
+     "niri/language": {
       "format": " {}",
       "format-gr": "GR",
       "format-en": "US",
@@ -75,7 +92,21 @@
     ".*[Ff]ish.*": "  $0",
     ".*[Rr]ofi.*": "  $0",
     ".*[Yi]azi.*": "  $0",
-},
+      },
+    "format": "{}",
+    "on-empty": "hide"
+    },
+   "niri/window": {
+    "max-length": 80,
+    "rewrite": {
+    ".*[Ff]irefox.*": "󰈹  $0",
+    ".*[Kk]itty.*": "  $0",
+    ".*[Ff]oot.*": "  $0",
+    ".*[Nn]eovim.*|.*nvim.*": "  $0",
+    ".*[Ff]ish.*": "  $0",
+    ".*[Rr]ofi.*": "  $0",
+    ".*[Yi]azi.*": "  $0",
+    },
     "format": "{}",
     "on-empty": "hide"
     },
