updated keybindings for hyprland

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -141,7 +141,7 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, F, fullscreen,
 bind = $mainMod SHIFT, R, exec, hyprctl reload 
-bind = $mainMod SHIFT, P, exec, $HOME/.config/hypr/waybar.sh 
+bind = $mainMod SHIFT, P, exec, $HOME/.config/scripts/waybar.sh 
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
