--- a/dot_config/fastfetch/config.jsonc
+++ b/dot_config/fastfetch/config.jsonc
@@ -24,6 +24,11 @@
             "type": "de"
         },
         {
+            "key": "{#36}󰇄 WM     {#keys}",
+            "type": "wm"
+        },
+
+        {
             "key": "{#96} pkgs   {#keys}",
             "type": "packages"
         },
@@ -61,7 +66,7 @@
             "type": "display"
         },
         {
-            "key": "{#34}󰉉 disk  {#keys}",
+            "key": "{#34}󰉉 disk   {#keys}",
             "type": "disk",
             "folders": "/"
         },
