--- a/dot_config/fastfetch/config.jsonc
+++ b/dot_config/fastfetch/config.jsonc
@@ -24,7 +24,7 @@
             "type": "de"
         },
         {
-            "key": "{#36}󰇄 WM     {#keys}",
+            "key": "{#36} wm     {#keys}",
             "type": "wm"
         },
 
