--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -12,7 +12,8 @@ exec-once = systemctl --user start hyprpolkitagent
 exec-once = $HOME/.config/hypr/waybar.sh & dunst & hypridle
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
-exec = $HOME/.config/hypr/wallpaper.sh
+exec-once = swww-daemon
+exec = swww img $HOME/Pictures/catppuccin-city.png
 
 # Environment Variables
 env = HYPRCURSOR_THEME,catppuccin-mocha-sapphire-cursors
