live wallpaper with swww

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -13,7 +13,7 @@ exec-once = $HOME/.config/hypr/waybar.sh & dunst & hypridle
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 exec-once = swww-daemon
-exec = swww img $HOME/Pictures/catppuccin-city.png
+exec = swww img $HOME/Pictures/mylivewallpapers-com-Porsche-911-City-Rain-4K.gif
 
 # Environment Variables
 env = HYPRCURSOR_THEME,catppuccin-mocha-sapphire-cursors
