added qalculate keybind

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -153,7 +153,7 @@ bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
 bind = $mainMod SHIFT, left, cyclenext, prev
 bind = $mainMod SHIFT, right, cyclenext
-
+bind = , XF86Calculator, exec, qalculate-gtk
 bind = Alt, Space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, Space, togglesplit, # dwindle
