updated waybar colors

--- a/dot_config/waybar/config
+++ b/dot_config/waybar/config
@@ -22,6 +22,7 @@
         "memory",
         "temperature",
         "network",
+        "network#speed",
         "wireplumber",
         "battery",
         "custom/power"
@@ -104,7 +105,7 @@
     "network": {
         "format-wifi" : "{icon}",
         "format-icons": ["󰤯 ","󰤟 ","󰤢 ","󰤥 ","󰤨 "],
-        "format-ethernet": "󱄙",
+        "format-ethernet": "󰱓",
 	"format-alt" : "󱛇",
         "format-disconnected" : "󰖪 ",
 	"tooltip-format-wifi": "{icon} {essid}\n⇣{bandwidthDownBytes}  ⇡{bandwidthUpBytes}",
@@ -113,6 +114,22 @@
 	"interval": 5,
 	"nospacing": 1,
     },
+    "network#speed": {
+    "interval": 1,
+    "format": "󰑩 {ifname}%%",
+    "format-wifi": " {bandwidthDownBytes}  {bandwidthUpBytes}",
+    "format-ethernet": " {bandwidthDownBytes}  {bandwidthUpBytes} ",
+    "format-disconnected": "󰌙",
+    "tooltip-format": "{ipaddr}",
+    "format-linked": "󰈁 {ifname} (No IP)",
+    "tooltip-format-wifi": "{essid} {icon} {signalStrength}%",
+    "tooltip-format-ethernet": "{ifname} 󰌘",
+    "tooltip-format-disconnected": "󰌙 Disconnected",
+    "max-length": 22,
+    "min-length": 0,
+    "format-icons": ["󰤯", "󰤟", "󰤢", "󰤥", "󰤨"],
+   	"nospacing": 1,
+  },
     "wireplumber": {
         "format": "{icon}",
         "format-bluetooth": "󰂰 ",
