updated hyprlock colors

--- a/dot_config/hypr/hyprlock.conf
+++ b/dot_config/hypr/hyprlock.conf
@@ -21,7 +21,7 @@ background {
 label {
   monitor =
   text = Layout: $LAYOUT
-  color = $text
+  color = $mantle
   font_size = 20
   font_family = $font
   position = 30, -30
