--- a/dot_config/waybar/config
+++ b/dot_config/waybar/config
@@ -144,7 +144,8 @@
         "scroll-step": 1
     },
     "custom/logo": {
-        "format": "  ",
+        "format": "",
+        "min-length": 5,
         "tooltip": false,
         "on-click": "$HOME/.config/rofi/launchers/type-3/launcher.sh"
     },
