--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -12,7 +12,7 @@ exec-once=dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY
 exec-once = xdg-desktop-portal-hyprland
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = gnome-keyring
-exec-once = $HOME/.config/hypr/waybar.sh 
+exec-once = $HOME/.config/hypr/scripts/waybar.sh 
 exec-once = mako
 exec-once = hypridle
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
