updated niri config

--- a/dot_config/niri/waybar/config.jsonc
+++ b/dot_config/niri/waybar/config.jsonc
@@ -39,8 +39,8 @@
     "disable-click": false,
     "format": "{icon}",
     "format-icons": {
-      "active": "",
-      "default": "",
+      "active": "󰝥",
+      "default": "󰝦",
     },
     },
       "niri/language": {
