updated clipboard keybind

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -163,7 +163,7 @@ bind = SHIFT, Print, exec, hyprshot -m window -m active
 bind = $mainMod SHIFT, Print, exec, hyprshot -m region
 bind = Alt, E, exec, thunar
 bind = $mainMod, N, exec, foot --title=nvim nvim
-bind = $mainMod SHIFT, V, exec, cliphist list | rofi -dmenu -theme catppuccin | cliphist decode | wl-copy
+bind = $mainMod SHIFT, c, exec, cliphist list | rofi -dmenu -theme catppuccin | cliphist decode | wl-copy
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
