added dms to hyprland

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -10,7 +10,7 @@ $menu = $HOME/.config/rofi/launchers/type-1/launcher.sh
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 exec-once = xdg-desktop-portal-hyprland
 exec-once = gnome-keyring
-exec-once = $HOME/.config/hypr/scripts/waybar.sh 
+exec-once = dms run
 exec-once = mako
 exec-once = hypridle
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
@@ -213,13 +213,29 @@ bindel = $mainMod, h, resizeactive, -10 0
 bindel = $mainMod, k, resizeactive, 0 -10
 bindel = $mainMod, j, resizeactive, 0 10
 
-# Laptop multimedia keys for volume and LCD brightness
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
-bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
+# Application and system controls
+bind = SUPER, Space, exec, dms ipc call spotlight toggle
+bind = SUPER, V, exec, dms ipc call clipboard toggle
+bind = SUPER, M, exec, dms ipc call processlist toggle
+bind = SUPER, N, exec, dms ipc call notifications toggle
+bind = SUPER, comma, exec, dms ipc call settings toggle
+bind = SUPER, P, exec, dms ipc call notepad toggle
+bind = SUPERALT, L, exec, dms ipc call lock lock
+bind = SUPER, X, exec, dms ipc call powermenu toggle
+
+# Audio controls (function keys)
+bindl = , XF86AudioRaiseVolume, exec, dms ipc call audio increment 3
+bindl = , XF86AudioLowerVolume, exec, dms ipc call audio decrement 3
+bindl = , XF86AudioMute, exec, dms ipc call audio mute
+bindl = , XF86AudioMicMute, exec, dms ipc call audio micmute
+
+# Brightness controls (function keys)
+bindl = , XF86MonBrightnessUp, exec, dms ipc call brightness increment 5 ""
+# You can override the default device for e.g. keyboards by adding the device name to the last param
+bindl = , XF86MonBrightnessDown, exec, dms ipc call brightness decrement 5 ""
+
+# Night mode toggle
+bind = SUPERSHIFT, N, exec, dms ipc call night toggle
 
 # Media Controls
 bindl = , XF86AudioNext, exec, playerctl next
