updated hyprland keybindings

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -161,7 +161,6 @@ bind = SHIFT, Print, exec, hyprshot -m window -m active
 bind = $mainMod SHIFT, Print, exec, hyprshot -m region
 bind = Alt, E, exec, thunar
 bind = $mainMod, N, exec, foot --title=nvim nvim
-bind = $mainMod SHIFT, c, exec, cliphist list | rofi -dmenu -theme catppuccin | cliphist decode | wl-copy
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -214,12 +213,12 @@ bindel = $mainMod, k, resizeactive, 0 -10
 bindel = $mainMod, j, resizeactive, 0 10
 
 # Application and system controls
-bind = SUPER, Space, exec, dms ipc call spotlight toggle
-bind = SUPER, V, exec, dms ipc call clipboard toggle
+bind = $mainMod SHIFT, Space, exec, dms ipc call spotlight toggle
+bind = $mainMod SHIFT, C, exec, dms ipc call clipboard toggle
 bind = SUPER, M, exec, dms ipc call processlist toggle
-bind = SUPER, N, exec, dms ipc call notifications toggle
+bind = Alt, N, exec, dms ipc call notifications toggle
 bind = SUPER, comma, exec, dms ipc call settings toggle
-bind = SUPER, P, exec, dms ipc call notepad toggle
+bind = Alt, P, exec, dms ipc call notepad toggle
 bind = SUPERALT, L, exec, dms ipc call lock lock
 bind = SUPER, X, exec, dms ipc call powermenu toggle
 
