--- a/dot_config/DankMaterialShell/settings.json
+++ b/dot_config/DankMaterialShell/settings.json
@@ -84,8 +84,8 @@
   "dockAutoHide": false,
   "cornerRadius": 12,
   "notificationOverlayEnabled": false,
-  "topBarAutoHide": false,
-  "topBarOpenOnOverview": false,
+  "topBarAutoHide": true,
+  "topBarOpenOnOverview": true,
   "topBarVisible": true,
   "topBarSpacing": 4,
   "topBarBottomGap": 0,
