--- a/dot_config/qt6ct/qt6ct.conf
+++ b/dot_config/qt6ct/qt6ct.conf
@@ -30,3 +30,7 @@ geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x3\xac\0\0\x3\x
 [Troubleshooting]
 force_raster_widgets=1
 ignored_applications=@Invalid()
+
+[Appearance]
+custom_palette=true
+color_scheme_path=/home/dimitris/.local/share/color-schemes/DankMatugen.colors
