uodated config and setup script

--- a/dot_config/DankMaterialShell/settings.json
+++ b/dot_config/DankMaterialShell/settings.json
@@ -3,7 +3,7 @@
   "customThemeFile": "/home/dimitris/.config/DankMaterialShell/themes/catppuccin.json",
   "topBarTransparency": 0.85,
   "topBarWidgetTransparency": 0.85,
-  "popupTransparency": 0.92,
+  "popupTransparency": 0.85,
   "dockTransparency": 0.38,
   "use24HourClock": true,
   "useFahrenheit": false,
@@ -40,7 +40,7 @@
   "workspaceNameIcons": {},
   "waveProgressEnabled": true,
   "clockCompactMode": false,
-  "focusedWindowCompactMode": true,
+  "focusedWindowCompactMode": false,
   "runningAppsCompactMode": true,
   "runningAppsCurrentWorkspace": true,
   "clockDateFormat": "",
@@ -140,7 +140,7 @@
   "topBarBottomGap": 0,
   "topBarInnerPadding": 8,
   "topBarSquareCorners": false,
-  "topBarNoBackground": true,
+  "topBarNoBackground": false,
   "lockScreenShowPowerActions": true,
   "hideBrightnessSlider": false,
   "notificationTimeoutLow": 5000,
