--- a/dot_config/qt6ct/qt6ct.conf
+++ b/dot_config/qt6ct/qt6ct.conf
@@ -34,3 +34,7 @@ ignored_applications=@Invalid()
 [Appearance]
 custom_palette=true
 color_scheme_path=/home/dimitris/.local/share/color-schemes/DankMatugen.colors
+
+[Appearance]
+custom_palette=true
+color_scheme_path=/home/dimitris/.local/share/color-schemes/DankMatugen.colors
